--- a/Lab 3 - drumkit/style.css
+++ b/Lab 3 - drumkit/style.css
@@ -10,3 +10,18 @@
 #infoBlock {
     margin-left: 70px;
 }
+
+.darken{
+    background-color: red;
+}
+
+#stopRecord, #playAll{
+    margin-right: 20px;
+    width: 100px;
+    font-size: 15px;
+    border-radius: 5px;
+}
+
+.pulse{
+    transform: scale(1.1);
+}
